--- a/css/main.css
+++ b/css/main.css
@@ -821,20 +821,22 @@ input[type=range] {
   background: transparent;
 }
 
-input[type='range']::-webkit-slider-runnable-track {
-  -webkit-appearance: none;
-  height: 20px;
+/*Styling the track in Chrome*/
+
+input[type=range]::-webkit-slider-runnable-track {
+  background-color: hsl(174, 86%, 45%);
+  border-radius: 4px;
+  width: 100%;
+  height: 10px;
+  cursor: pointer;
 }
 
-input[type='range']::-webkit-slider-thumb {
+input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
-  background-color: hsl(174, 86%, 45%);
-  border-radius: 50%;
-  box-shadow: -210px 0 0 200px hsl(224, 65%, 95%);
+  border: 1px solid hsl(174, 86%, 45%);
   cursor: pointer;
-  height: 10px;
-  width: 10px;
-  border: 0;
+  margin-top: -14px;
+  box-shadow: 1px 1px 1px hsl(174, 86%, 45%), 0px 0px 1px hsl(174, 86%, 45%);
 }
 
 input[type="range"]::-moz-range-progress {
@@ -902,6 +904,8 @@ input[type=range]::-webkit-slider-thumb {
     --disabled: #F6F8FF;
     --disabled-inner: #E1E6F9;
     -moz-appearance: none;
+    -webkit-appearance: none;
+            appearance: none;
     height: 28px;
     width: 53px;
     border-radius: 15px;
